Fix dark mode styles in styles.css

--- a/src/styles.css
+++ b/src/styles.css
@@ -70,7 +70,7 @@ button {
   margin-right: 5px;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     color: #f6f6f6;
     background-color: #2f2f2f;
@@ -88,4 +88,4 @@ button {
   button:active {
     background-color: #0f0f0f69;
   }
-}
+} */
